--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,11 @@ h1 {
   background: #2383c4;
 }
 
+/* Aiden Change: margin added to bottom of page */
+.contact {
+  margin-bottom: 40px;
+}
+
 .contact .form-group {
   margin-bottom: 20px;
 }
