Reviewed and Accepted some of Aiden's Suggestions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #444444; 
+}
+
+.ul {
+  list-style-type: none;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding: 0px;
+  background-color: black;
+}
+
+li a {
+  display: block;
+  color: white;
+}
+
+.active {
+  background-color: rgb(41, 172, 215);
+}
+
+li {
+  text-align: center;
 }
 
 h1 {
   font-family: "Raleway", sans-serif;
+}
+
+nav {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 
 .section-title {
